--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/BumbuKhan/bumbu.tv_frontend/issues"
   },
-  "homepage": "https://github.com/BumbuKhan/bumbu.tv_frontend#readme"
+  "homepage": "https://github.com/BumbuKhan/bumbu.tv_frontend#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
