--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/BumbuKhan/bumbu.tv_frontend#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.7",
     "gulp": "^3.9.1"
   }
 }
