--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "browser-sync": "^2.18.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.1"
   },
   "dependencies": {
