VIDEO PLAYER - included video.js (http://videojs.com/) framework GULP - added 'gulpSequence' plugin, so now I can run build without manual deleting 'dist' folder GULP - added task for moving 'font' folder from src to dist folder LAYOUT - header color setted to white

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
     "primer-module-build": "*"
